# day0predictor-v0.1

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.disabled.yml
day0predict/: cli.py  features.py  model.py  scoring.py
examples/: cve_sample.json
scripts/: build_dataset.py  evaluate.py  fetch_kev.py  fetch_nvd.py  train.py
tests/: test_features.py  test_scoring.py
