[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "day0predict"
version = "0.1.0"
description = "Early exploitation risk scoring for newly disclosed vulnerabilities"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "ethicals7s"}]

dependencies = [
  "requests>=2.31",
  "pandas>=2.0",
  "numpy>=1.24",
  "scikit-learn>=1.3",
  "joblib>=1.3"
]

[project.scripts]
day0predict = "day0predict.cli:main"

[tool.setuptools]
packages = ["day0predict"]
